--- a/sidebar.html
+++ b/sidebar.html
@@ -15,7 +15,9 @@
     >- Registro de Resultados</a
   >
   <a href="03_Governanca_de_Defeitos.html">Governança de Defeitos</a>
-  <a href="04_Processo_de_Releases.html">Processo de Releases Quinzenais</a>
+  <a href="04_Processo_de_Releases.html"
+    >Processo de Releases e Gestão de Ciclos de QA</a
+  >
   <a href="05_Checklist_do_QA.html">Checklist do QA</a>
   <a href="06_Como_Reporter_Usa_Dados.html">Como o Reporter usa os Dados</a>
   <a href="07_Treinamento_e_Padronizacao.html">Treinamento e Padronização</a>
